@@ -33,7 +33,7 @@ include_once "include/page_header.php";
 //		VAR			TYPE	OPTIONAL FLAGS	VALIDATION	EXCEPTION
 	$fields=array(
 		"itemid"=>		array(T_ZBX_INT, O_MAND,P_SYS,	DB_ID,		null),
-		"period"=>		array(T_ZBX_INT, O_OPT,	null,	BETWEEN(3600,365*24*3600),	null),
+		"period"=>		array(T_ZBX_INT, O_OPT,	null,	BETWEEN(ZBX_MIN_PERIOD,ZBX_MAX_PERIOD),	null),
 		"from"=>		array(T_ZBX_INT, O_OPT,	null,	'{}>=0',	null),
 		"width"=>		array(T_ZBX_INT, O_OPT,	null,	'{}>0',		null),
 		"height"=>		array(T_ZBX_INT, O_OPT,	null,	'{}>0',		null),
