@@ -33,7 +33,7 @@ include_once "include/page_header.php";
 <?php
 //		VAR			TYPE	OPTIONAL FLAGS	VALIDATION	EXCEPTION
 	$fields=array(
-		"period"=>	array(T_ZBX_INT, O_OPT,	P_NZERO,	BETWEEN(3600,12*31*24*3600),	null),
+		"period"=>	array(T_ZBX_INT, O_OPT,	P_NZERO,	BETWEEN(ZBX_MIN_PERIOD,ZBX_MAX_PERIOD),	null),
 		"from"=>	array(T_ZBX_INT, O_OPT,	P_NZERO,	null,			null),
 		"stime"=>	array(T_ZBX_INT, O_OPT,	P_NZERO,	null,			null),
 		"border"=>	array(T_ZBX_INT, O_OPT,	P_NZERO,	IN('0,1'),		null),
