@@ -44,7 +44,7 @@ include_once "include/page_header.php";
 		"itemid"=>	array(T_ZBX_INT, O_MAND, P_SYS,	DB_ID,	null),
 		
 		"from"=>	array(T_ZBX_INT, O_OPT,	 null,	'{}>=0', null),
-		"period"=>	array(T_ZBX_INT, O_OPT,	 null,	'{}>=3600', null),
+		"period"=>	array(T_ZBX_INT, O_OPT,	 null,	BETWEEN(ZBX_MIN_PERIOD,ZBX_MAX_PERIOD), null),
 		"dec"=>		array(T_ZBX_INT, O_OPT,	 null,	null, null),
 		"inc"=>		array(T_ZBX_INT, O_OPT,	 null,	null, null),
 		"left"=>	array(T_ZBX_INT, O_OPT,	 null,	null, null),
@@ -129,8 +129,8 @@ include_once "include/page_header.php";
 	
 		if($_REQUEST["action"]=="showgraph")
 		{
-			$_REQUEST["period"] = get_request("period",get_profile("web.item[".$_REQUEST["itemid"]."].graph.period", 3600));
-			if($_REQUEST["period"] >= 3600)
+			$_REQUEST["period"] = get_request("period",get_profile("web.item[".$_REQUEST["itemid"]."].graph.period", ZBX_PERIOD_DEFAULT));
+			if($_REQUEST["period"] >= ZBX_MIN_PERIOD)
 			{
 				update_profile("web.item[".$_REQUEST["itemid"]."].graph.period",$_REQUEST["period"]);
 			}
